2016-04-14 Added blocking wrong answers in Text module
2016-04-13 Fixed rendering latex in Text module
2016-04-11 Added sending continuous events and stick steps in Slider module 
2016-04-08 Fixed dragging element in Ordering module
2016-04-08 Added french layout to Paragraph
2016-04-08 Added list and combo views in Table of Contents module
2016-04-07 Added exporting report to file in Print Report module
2016-04-07 Added Reset, CheckAnswers and ShowAnswers to Keyboard Navigation
2016-04-07 Added method getModulesAsJS to player's API
2016-04-06 Fixed tests in Table module
2016-04-06 Fixed issue with inserting Image_Viewer module
2016-04-06 Fixed issue with changing gap width in editor in Table module
2016-04-05 Fixed issue with showing module when lesson is in iframe in Glossary module
2016-04-04 Fixed issue with appearing native keyboard in eKeyboard module on Android
2016-03-30 Fixed issue with droppable gaps in Text module
2016-03-24 Added new module Variable Storage
2016-03-21 Fixed scrolling and text wrapping on iOS in Paragraph module
2016-03-18 Added displaying current date in Print Report module
2016-03-18 Fixed issue with class after changing page in Table module
2016-03-18 Fixed issue with variables in Math module
2016-03-18 Added isAllOK command to Writing Calculation module
2016-03-17 Added labels for showing documentation in editor
2016-03-16 Added show and hide methods in Magic Box module
2016-03-16 Added mode on and off to keyboard navigation
2016-03-15 Fixed displaying background in Memo Game module
2016-03-15 Fixed reseting axis values position in Plot module
2016-03-14 Fixed issue with reset in Audio module
2016-03-14 Added keyboard navigation
2016-03-10 Secured adding handlers for creating presenters
2016-03-09 Fixed issue with inline styles
2016-03-07 Added loading all dictionaries.
2016-03-04 Fixed zoom in IWB Toolbar module
2016-03-04 Added setting last page as separated page in Navigation Bar module