@@ -6,5 +6,6 @@
 		<property name="SelectionCorrect" nameLabel="text_identification_property_selection_correct" type="boolean" />
 		<property name="onSelected" nameLabel="text_identification_property_on_selected" type="event" />
 		<property name="onDeselected" nameLabel="text_identification_property_on_deselected" type="event" />
+        <property name="blockWrongAnswers" displayName="Block wrong answers" nameLabel="text_identification_property_block_wrong_answers" type="boolean" />
 	</model>
 </addon>
